--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=intro.web
 #server.port => Sunucu portunu belirler.
 server.port=8081
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5434/northwind
+spring.datasource.username=postgres
+spring.datasource.password=abc123
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
